# SmartThermostat

./: .cyignore  Makefile  README.md
UI_Files/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
UI_Files/components/: ui_comp.c  ui_comp.h  ui_comp_alarm_comp.c  ui_comp_alarm_comp.h  ui_comp_clock_dot.c  ui_comp_clock_dot.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_scrolldots.c  ui_comp_scrolldots.h  ui_comp_small_label.c  ui_comp_small_label.h
UI_Files/images/: ui_img_clock_hour_png.c  ui_img_clock_min_png.c  ui_img_clock_sec_png.c  ui_img_humidity_png.c  ui_img_pattern_png.c  ui_img_rain_png.c  ui_img_smarthome_png.c  ui_img_temperature_png.c  ui_img_wifi_png.c  ui_img_windspeed_png.c
UI_Files/screens/: ui_DashBoardScreen.c
configs/: mbedtls_user_config.h
scripts/: generate_ssl_certs.sh
source/: FreeRTOSConfig.h  lv_conf.h  lvgl_support.c  lvgl_support.h  main.c  secure_http_client.c  secure_http_client.h  secure_keys.h  tft_task.c  tft_task.h
